<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.arangodb</groupId>
    <artifactId>arangodb-spark-datasource</artifactId>
    <packaging>pom</packaging>
    <version>1.9.0</version>

    <name>${project.artifactId}</name>
    <description>ArangoDB Datasource for Apache Spark</description>
    <url>https://github.com/arangodb/arangodb-spark-datasource</url>

    <scm>
        <url>https://github.com/arangodb/arangodb-spark-datasource</url>
    </scm>

    <modules>
        <module>arangodb-spark-commons</module>
        <module>arangodb-spark-datasource-${spark.compat.version}</module>
    </modules>

    <licenses>
        <license>
            <name>Apache License 2.0</name>
            <url>http://www.apache.org/licenses/LICENSE-2.0</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <organization>
        <name>ArangoDB GmbH</name>
        <url>https://www.arangodb.com</url>
    </organization>

    <developers>
        <developer>
            <name>Michele Rastelli</name>
            <url>https://github.com/rashtao</url>
        </developer>
    </developers>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <sonar.organization>arangodb-1</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.coverage.jacoco.xmlReportPaths>integration-tests/target/site/jacoco-aggregate/jacoco.xml
        </sonar.coverage.jacoco.xmlReportPaths>
        <sonar.scala.scalastyle.reportPaths>
            ${project.build.directory}/scalastyle-output.xml
        </sonar.scala.scalastyle.reportPaths>
        <sonar.scala.scapegoat.reportPaths>
            ${project.build.directory}/scapegoat/scapegoat-scalastyle.xml
        </sonar.scala.scapegoat.reportPaths>
        <maven.deploy.skip>true</maven.deploy.skip>
        <scalastyle.skip>true</scalastyle.skip>
        <jpms.exports/>
    </properties>

    <profiles>
        <profile>
            <id>scala-2.12</id>
            <properties>
                <scala.version>2.12.19</scala.version>
                <scala.compat.version>2.12</scala.compat.version>
                <scapegoat.version>2.1.6</scapegoat.version>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <scala.plugin.version>4.7.2</scala.plugin.version>
            </properties>
        </profile>
        <profile>
            <id>scala-2.13</id>
            <properties>
                <scala.version>2.13.8</scala.version>
                <scala.compat.version>2.13</scala.compat.version>
                <scapegoat.version>1.4.17</scapegoat.version>
                <maven.compiler.source>1.8</maven.compiler.source>
                <maven.compiler.target>1.8</maven.compiler.target>
                <scala.plugin.version>4.7.2</scala.plugin.version>
            </properties>
        </profile>
        <profile>
            <id>scala-2.13.18</id>
            <properties>
                <scala.version>2.13.18</scala.version>
                <scala.compat.version>2.13</scala.compat.version>
                <scapegoat.version>3.2.4</scapegoat.version>
                <maven.compiler.source>17</maven.compiler.source>
                <maven.compiler.target>17</maven.compiler.target>
                <scala.plugin.version>4.9.8</scala.plugin.version>
            </properties>
        </profile>
        <profile>
            <id>spark-3.5</id>
            <properties>
                <spark.version>3.5.7</spark.version>
                <spark.compat.version>3.5</spark.compat.version>
                <jackson.version>2.15.2</jackson.version>
            </properties>
        </profile>
        <profile>
            <id>spark-4.0</id>
            <properties>
                <spark.version>4.0.1</spark.version>
                <spark.compat.version>4.0</spark.compat.version>
                <jackson.version>2.18.2</jackson.version>
            </properties>
        </profile>
        <profile>
            <id>spark-4.1</id>
            <properties>
                <spark.version>4.1.0</spark.version>
                <spark.compat.version>4.1</spark.compat.version>
                <jackson.version>2.20.0</jackson.version>
            </properties>
        </profile>
        <profile>
            <id>jdk17</id>
            <activation>
                <jdk>[17,)</jdk>
            </activation>
            <properties>
                <jpms.exports>
                    --add-exports java.base/sun.nio.ch=ALL-UNNAMED
                    --add-exports java.base/sun.util.calendar=ALL-UNNAMED
                </jpms.exports>
            </properties>
        </profile>
        <profile>
            <id>no-deploy</id>
            <activation>
                <property>
                    <name>!deploy</name>
                </property>
            </activation>
            <modules>
                <module>integration-tests</module>
            </modules>
        </profile>
    </profiles>

    <dependencies>
        <dependency>
            <groupId>com.arangodb</groupId>
            <artifactId>arangodb-java-driver-shaded</artifactId>
            <version>7.24.2</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.arangodb</groupId>
            <artifactId>velocypack</artifactId>
            <version>3.1.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.arangodb</groupId>
            <artifactId>jackson-dataformat-velocypack</artifactId>
            <version>4.6.3</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-core</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-databind</artifactId>
                </exclusion>
                <exclusion>
                    <groupId>com.fasterxml.jackson.core</groupId>
                    <artifactId>jackson-annotations</artifactId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_${scala.compat.version}</artifactId>
            <version>${spark.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sksamuel.scapegoat</groupId>
            <artifactId>scalac-scapegoat-plugin_${scala.version}</artifactId>
            <version>${scapegoat.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Test -->
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>3.27.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.fasterxml.jackson</groupId>
                <artifactId>jackson-bom</artifactId>
                <version>${jackson.version}</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.14.1</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-reflect</artifactId>
                <version>${scala.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.scala-lang</groupId>
                <artifactId>scala-compiler</artifactId>
                <version>${scala.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>src/main/scala</sourceDirectory>
        <testSourceDirectory>src/test/scala</testSourceDirectory>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.jacoco</groupId>
                    <artifactId>jacoco-maven-plugin</artifactId>
                    <version>0.8.14</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.8.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>${scala.plugin.version}</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>compile</goal>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <scalaVersion>${scala.version}</scalaVersion>
                    <args>
                        <arg>-P:scapegoat:dataDir:${project.build.directory}/scapegoat</arg>
                        <arg>-P:scapegoat:overrideLevels:all=Warning</arg>
                        <arg>
                            -P:scapegoat:ignoredFiles:.*/src/test/scala/.*:.*/org/apache/spark/sql/arangodb/datasource/mapping/json/.*
                        </arg>
                        <arg>-P:scapegoat:disabledInspections:CatchException</arg>
                    </args>
                    <compilerPlugins>
                        <compilerPlugin>
                            <groupId>com.sksamuel.scapegoat</groupId>
                            <artifactId>scalac-scapegoat-plugin_${scala.version}</artifactId>
                            <version>${scapegoat.version}</version>
                        </compilerPlugin>
                    </compilerPlugins>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <configuration>
                    <append>true</append>
                    <excludes>
                        <exclude>org/apache/spark/sql/arangodb/datasource/mapping/json/**/*</exclude>
                    </excludes>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.scalastyle</groupId>
                <artifactId>scalastyle-maven-plugin</artifactId>
                <version>1.0.0</version>
                <configuration>
                    <verbose>false</verbose>
                    <failOnViolation>true</failOnViolation>
                    <failOnWarning>false</failOnWarning>
                    <includeTestSourceDirectory>false</includeTestSourceDirectory>
                    <sourceDirectory>${project.basedir}/src/main/scala</sourceDirectory>
                    <configLocation>${project.basedir}/../lib/scalastyle_config.xml</configLocation>
                    <outputFile>${project.build.directory}/scalastyle-output.xml</outputFile>
                    <outputEncoding>UTF-8</outputEncoding>
                </configuration>
                <executions>
                    <execution>
                        <phase>process-sources</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.4</version>
                <configuration>
                    <argLine>
                        @{argLine}
                        -Duser.timezone=UTC
                        ${jpms.exports}
                    </argLine>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.sonatype.central</groupId>
                <artifactId>central-publishing-maven-plugin</artifactId>
                <version>0.9.0</version>
                <extensions>true</extensions>
                <configuration>
                    <publishingServerId>central</publishingServerId>
                    <autoPublish>true</autoPublish>
                    <waitUntil>published</waitUntil>
                    <skipPublishing>${maven.deploy.skip}</skipPublishing>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>1.7.3</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                </configuration>
                <executions>
                    <execution>
                        <id>flatten</id>
                        <phase>package</phase>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-gpg-plugin</artifactId>
                <version>3.2.8</version>
                <executions>
                    <execution>
                        <id>sign-artifacts</id>
                        <phase>verify</phase>
                        <goals>
                            <goal>sign</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.4.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <!-- empty javadoc to publish on maven central repository -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.5.0</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>jar</goal>
                        </goals>
                        <configuration>
                            <classifier>javadoc</classifier>
                            <classesDirectory>${basedir}/javadoc</classesDirectory>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.6.2</version>
                <executions>
                    <execution>
                        <id>enforce</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireExplicitDependencyScope/>
                                <requireMavenVersion>
                                    <version>3.9</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
